# hell

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Win  client.h  cmd.c  cmd.h  com.c  com.h  common.c  common.h  compile_commands.json  create.sh  debug.c  debug.h  display.c  display.c~  display.h  ds.c  ds.h  error.c  error.h  frame.c  helltest  input.c  input.h  io.c  io.h  log.txt  main.c  mem.c  mem.h  platform.h  readme.md  scratch.txt  server.c  server.h  shared.h  unix_window.h  win32_window.h  (+3 more)
cmake/: CMakeLists.txt  HellConfig.cmake.in  macros.cmake
examples/: CMakeLists.txt  simple.c
include/hell/: common.h  ds.h  hell.h  input.h  macro.h  minmax.h  types.h  vars.h  window.h  xcb_window_type.h
src/: CMakeLists.txt  buffer.c  client.c  cmd.c  cmd.h  common.c  debug.c  ds.c  evcodes.h  frame.c  hell.h  input.c  io.c  main.c  mem.c  private.h  server.c  types.h  unix_window.h  win32_window.h  window.c
src/examples/: CMakeLists.txt  mouse-input.c  simple.c
src/include/hell/: attributes.h  cmd.h  common.h  debug.h  ds.h  evcodes.h  input.h  io.h  locations.h  macro.h  platform.h  types.h  win32_window_type.h  win_local.h  window.h
src/lib/: CMakeLists.txt  cmd.c  cmd.h  common.c  common.h  debug.c  ds.c  frame.c  input.c  input.h  io.c  len.h  mem.c  private.h  types.h  unix_window.h  win32_window.h  window.c  window.h
src/tests/: exe00.c  exe01.c  exe02.c
tests/: CMakeLists.txt  exe02.c
